--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,11 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "nodemon": "^3.1.11"
+    "express-rate-limit": "^8.2.1",
+    "nodemon": "^3.1.11",
+    "pino": "^10.3.1",
+    "pino-pretty": "^13.1.3",
+    "rate-limit-redis": "^4.3.1",
+    "redis": "^5.11.0"
   }
 }
